Correctly display whitespace

--- a/src/scss/imports/twitter.scss
+++ b/src/scss/imports/twitter.scss
@@ -151,6 +151,7 @@
     margin-top: 0;
     margin-bottom: 0;
     font-size: 14px;
+    white-space: pre-wrap;
 }
 .twitter-tweet-link {
     color: #109ACC;
